// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ComputerPlayer /> tests ComputerPlayer shoud match snapshot 1`] = `
Array [
  <div
    className="MuiGrid-item-5 MuiGrid-grid-xs-3-35"
  >
    <div
      className="MuiPaper-root-101 MuiPaper-elevation2-105 MuiPaper-rounded-102 ComputerPlayer-paper-2"
    >
      Think of a number between 1 and 100
    </div>
  </div>,
  <div
    className="MuiGrid-container-4 MuiGrid-justify-xs-center-21"
  >
    <button
      className="MuiButtonBase-root-154 MuiButton-root-128 MuiButton-contained-139 MuiButton-containedSecondary-141 MuiButton-raised-142 MuiButton-raisedSecondary-144 ComputerPlayer-button-1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-129"
      >
        Start game!
      </span>
      <span
        className="MuiTouchRipple-root-157"
      />
    </button>
  </div>,
]
`;

exports[`<ComputerPlayer /> tests Win state 1`] = `
Array [
  <div
    className="MuiGrid-container-4 MuiGrid-justify-xs-center-21"
  >
    <div
      className="MuiGrid-item-5 MuiGrid-grid-xs-3-35"
    >
      <h6
        className="MuiTypography-root-164 MuiTypography-h6-181 ComputerPlayer-paper-2"
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        Yay!!
      </h6>
    </div>
  </div>,
  <div
    className="MuiGrid-container-4 MuiGrid-justify-xs-center-21"
  >
    <button
      className="MuiButtonBase-root-154 MuiButton-root-128 MuiButton-contained-139 MuiButton-containedSecondary-141 MuiButton-raised-142 MuiButton-raisedSecondary-144 ComputerPlayer-button-1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-129"
      >
        Play again!
      </span>
      <span
        className="MuiTouchRipple-root-157"
      />
    </button>
  </div>,
]
`;

exports[`<ComputerPlayer /> tests start game  1`] = `
Array [
  <div
    className="MuiGrid-container-4 MuiGrid-justify-xs-center-21"
  >
    <div
      className="MuiGrid-item-5 MuiGrid-grid-xs-3-35"
    >
      <h6
        className="MuiTypography-root-164 MuiTypography-h6-181 ComputerPlayer-paper-2"
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        Is your number 1?
      </h6>
    </div>
  </div>,
  <div
    className="MuiGrid-container-4 MuiGrid-justify-xs-center-21"
  >
    <button
      className="MuiButtonBase-root-154 MuiButton-root-128 MuiButton-contained-139 MuiButton-containedPrimary-140 MuiButton-raised-142 MuiButton-raisedPrimary-143 ComputerPlayer-button-1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-129"
      >
        My number is SMALLER
      </span>
      <span
        className="MuiTouchRipple-root-157"
      />
    </button>
    <button
      className="MuiButtonBase-root-154 MuiButton-root-128 MuiButton-contained-139 MuiButton-containedPrimary-140 MuiButton-raised-142 MuiButton-raisedPrimary-143 ComputerPlayer-button-1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-129"
      >
        My number is BIGGER
      </span>
      <span
        className="MuiTouchRipple-root-157"
      />
    </button>
  </div>,
  <div
    className="MuiGrid-container-4 MuiGrid-justify-xs-center-21"
  >
    <button
      className="MuiButtonBase-root-154 MuiButton-root-128 MuiButton-contained-139 MuiButton-containedSecondary-141 MuiButton-raised-142 MuiButton-raisedSecondary-144 ComputerPlayer-button-1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-129"
      >
        You guessed!
      </span>
      <span
        className="MuiTouchRipple-root-157"
      />
    </button>
  </div>,
]
`;
